--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
+  cloud_firestore: ^4.3.1
 
 dev_dependencies:
   flutter_test:
